tests/expressions/type_error/eq.shelltest
// generated by `etc/generate_operator_test.py type_error eq`

eq_type_error.burn:
	import burn
	try { nothing == true } catch TypeError $e { print "TypeError" }
	try { true == nothing } catch TypeError $e { print "TypeError" }
	try { 1 == nothing } catch TypeError $e { print "TypeError" }
	try { 1.0 == nothing } catch TypeError $e { print "TypeError" }
	try { "foo" == nothing } catch TypeError $e { print "TypeError" }
	try { function(){} == nothing } catch TypeError $e { print "TypeError" }
	try { Something == nothing } catch TypeError $e { print "TypeError" }
	try { burn == nothing } catch TypeError $e { print "TypeError" }

$ burn --tolerant eq_type_error.burn
	* stdout
		TypeError
		TypeError
		TypeError
		TypeError
		TypeError
		TypeError
		TypeError
		TypeError
